# mcp-python-sdk-inmemory-server-tests

./: .gitignore  README.md  mcpserver.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: autotest.yml
tests/: test_from_client.py  test_functions.py
