[project]
name = "mcp-python-sdk-inmemory-server-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.6",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
